test/data/syntax-errors/no-comma-in-read.gs
Num x;
Num y;
printes x y;
